WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174295
Block of text is missing in iBooks sample books.
https://bugs.webkit.org/show_bug.cgi?id=174295
Summary
Block of text is missing in iBooks sample books.
alan
Reported
2017-07-08 22:33:50 PDT
rdar://problem/32955620
Attachments
Patch
(2.65 KB, patch)
2017-07-08 22:36 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.94 KB, patch)
2017-07-09 16:33 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.13 KB, patch)
2017-07-10 08:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-07-08 22:36:06 PDT
Created
attachment 314938
[details]
Patch
alan
Comment 2
2017-07-09 16:33:32 PDT
Created
attachment 314958
[details]
Patch
Antti Koivisto
Comment 3
2017-07-10 01:48:20 PDT
Comment on
attachment 314958
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=314958&action=review
> Source/WebCore/rendering/SimpleLineLayoutResolver.cpp:169 > + // Did we miss the line? > + if (y < bottom && !lastIndexCandidate) { > + ASSERT_NOT_REACHED(); > + return lineIndexCandidate; > }
Should turn this into pure assert post-branch.
alan
Comment 4
2017-07-10 08:05:27 PDT
(In reply to Antti Koivisto from
comment #3
)
> Comment on
attachment 314958
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=314958&action=review
> > > Source/WebCore/rendering/SimpleLineLayoutResolver.cpp:169 > > + // Did we miss the line? > > + if (y < bottom && !lastIndexCandidate) { > > + ASSERT_NOT_REACHED(); > > + return lineIndexCandidate; > > } > > Should turn this into pure assert post-branch.
Indeed.
alan
Comment 5
2017-07-10 08:25:31 PDT
Created
attachment 314981
[details]
Patch
WebKit Commit Bot
Comment 6
2017-07-10 09:03:06 PDT
Comment on
attachment 314981
[details]
Patch Clearing flags on attachment: 314981 Committed
r219291
: <
http://trac.webkit.org/changeset/219291
>
WebKit Commit Bot
Comment 7
2017-07-10 09:03:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug