Block of text is missing in iBooks sample books. https://bugs.webkit.org/show_bug.cgi?id=174295 <rdar://problem/32955620>

Reviewed by Antti Koivisto.

Source/WebCore:

In the simple line layout context, translating y coordinate to a line index is
normally just a (y / line height) operation. However in case of strut offsets (pagination)
we need to take these extra paddings into account while resolving the line index.
This patch fixes the boundary checking for a given line by using the font size only
when the font is taller than the line.

* rendering/SimpleLineLayoutResolver.cpp:
(WebCore::SimpleLineLayout::RunResolver::adjustLineIndexForStruts):

LayoutTests:

* fast/multicol/simple-line-layout-line-index-after-strut-2-expected.html: Added.
* fast/multicol/simple-line-layout-line-index-after-strut-2.html: Added.


Canonical link: https://commits.webkit.org/191134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219291 268f45cc-cd09-0410-ab3c-d52691b4dbfc